--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 
 # Site Settings
-title: Terapia Inspire
+title: Celebrante Diego Santos
 url: 'https://celebrandsantos.github.io/'
-logo: "logo.png?raw=true" # your photo (or logo) here
-description:  
+logo: "logo.jpg?raw=true" # your photo (or logo) here
+description:  Celebrante Casamentos, Bodas e Aniversários.
   
-instagram: terapia_inspire
+instagram: diegosantoscelebrante
 
 plugins:
   - jekyll-seo-tag
