--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 # Site Settings
 title: Celebrante Diego Santos
-url: 'https://celebrandsantos.github.io/'
+url: 'https://celebrandsantos.com.br'
 logo: "logo.jpg?raw=true" # your photo (or logo) here
-description:  Celebrante Casamentos, Bodas e Aniversários.
+description:  Celebrante de Casamentos, Bodas e Aniversários.
   
 instagram: diegosantoscelebrante
 
