--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Site Settings
 title: Celebrante Diego Santos
-url: 'https://celebrandsantos.com.br'
+url: 'celebrandsantos.com.br'
 logo: "logo.jpg?raw=true" # your photo (or logo) here
 description:  Celebrante de Casamentos, Bodas e Aniversários.
   
