--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ tagline:  Celebrante de Casamentos, Bodas e Aniversários.
 
 google_site_verification: # https://search.google.com/search-console?resource_id=sc-domain%3Acelebrantedsantos.com.br
 
+locale: pt_BR #en_US
+
 author:
   name: Celebrante Diego Santos
   url: https://celebrandsantos.com.br/
