--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site Settings
 title: Celebrante Diego Santos
 url: 'celebrantedsantos.com.br'
-logo: "/images/logo.jpg" # your photo (or logo) here
+logo: "/images/logo.png" # your photo (or logo) here
 description:  Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção!
 tagline:  Celebrante de Casamentos, Bodas e Aniversários. Rua 7 de setembro, 666 - Centro ARARAS SP
 
