--- a/_data/casamentos.yml
+++ b/_data/casamentos.yml
@@ -4,7 +4,15 @@
 casamentos:          
   - title:  O casamento Jéssica e ao Carlos  
     subtitle:  pela oportunidade de fazer parte desse momento tão especial.
-    imagem: images/casamento01.jpg
+    imagem: images/casamentos/casamento01.jpg
   - title:   O casamento Gustavo Viana e Stefanie Oliveira
     subtitle: pela oportunidade de fazer parte desse momento tão especial.
-    imagem: images/casamento02.jpg
+    imagem: images/casamentos/casamento02.jpg
+    
+  - title:   O casamento Carla e Gustavo
+    subtitle: pela oportunidade de fazer parte desse momento tão especial.
+    imagem: images/casamentos/casamento03a.jpg
+    
+  - title:  O casamento Carla e Gustavo
+    subtitle: pela oportunidade de fazer parte desse momento tão especial.
+    imagem: images/casamentos/casamento03b.jpg
