--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,6 +16,7 @@ empresa:
      whatsapp : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      instagram : https://www.instagram.com/diegosantoscelebrante/
      imagem: images/diego.jpg
+     logo: images/logo.png
      portfolio : #
      detalhes: |
               Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. \
