--- a/_config.yml
+++ b/_config.yml
@@ -12,19 +12,19 @@ google_site_verification: # https://search.google.com/search-console?resource_id
 color: 55A3BA #55A3BA
 
 locale: pt_BR #en_US
-canonical_url: 'https://celebrantedsantos.com.br/'  
+canonical_url: 'https://celebrantedsantos.com.br'  
 timezone:  America/Sao_Paulo
 
 
 author:
   name: Celebrante Diego Santos
-  url: https://celebrantedsantos.com.br/
+  url: https://celebrantedsantos.com.br
 
 instagram: diegosantoscelebrante
 social:
   name: diegosantoscelebrante
   links:
-    - https://instagram.com/diegosantoscelebrante/ 
+    - https://instagram.com/diegosantoscelebrante 
 
 
 plugins:
