--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:  Celebro o amor incondicional dos noivos e torno o grande dia da ce
 tagline:  Celebrante de Casamentos, Bodas e Aniversários em Araras SP e Região
 
 #Colo Padrao
-color: 0000000 #55A3BA
+color: FFFFFF #55A3BA
 
 locale: pt_BR #en_US 
 timezone:  America/Sao_Paulo
