--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ plugins:
 webmaster_verifications:
   google: G-NWBC1EDVHS
 
+
+analytics : G-NWBC1EDVHS
+
+
 sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
