--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: Celebrante Diego Santos
 url: 'https://celebrantedsantos.com.br'
-logo: "https://celebrantedsantos.com.br/images/logo.png" # your photo (or logo) here
+logo: "https://celebrantedsantos.com.br/images/avatar.png" # your photo (or logo) here
 description:  Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção! . Rua 7 de setembro, 666 - Centro ARARAS SP
 tagline:  Celebrante de Casamentos, Bodas e Aniversários em Araras SP e Região
 
