--- a/_data/casamentos.yml
+++ b/_data/casamentos.yml
@@ -17,3 +17,10 @@ casamentos:
   - title:  
     subtitle: 
     imagem: images/casamentos/casamento03b.jpg
+
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento04.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento04b.jpg
