--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,7 +15,7 @@ empresa:
      emaillink : "mailto:terapiainspire@gmail.com"
      whatsapp : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      instagram : https://www.instagram.com/diegosantoscelebrante/
-     imagem: images/diego.jpg
+     imagem: images/diego.webp
      portfolio : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      logo: images/logo.png
      detalhes: |
