--- a/_data/casamentos.yml
+++ b/_data/casamentos.yml
@@ -25,3 +25,11 @@ casamentos:
   - title:  
     subtitle: 
     imagem: images/casamentos/casamento04b.webp
+
+      - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento05.jpg
+
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento05b.jpg
