--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,8 @@ empresa:
      email: terapiainspire@gmail.com
      emaillink : "mailto:terapiainspire@gmail.com"
      whatsapp : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
-     instagram : https://www.instagram.com/diegosantoscelebrante/
+     instagram : https://www.instagram.com/diegosantoscelebrante/     
+     user : diegosantoscelebrante
      imagem: images/diego.webp
      portfolio : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      logo: images/logo.png
