--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ empresa:
      enderecolink: https://g.page/r/CSKVjwmt_FcfEBA
      wazelink: https://www.waze.com/en/live-map/directions/br/sp/terapia-inspire?place=ChIJkc-Co0h3yJQRIpWPCa38Vx8
      telefone: (19) 97156-4256
-     telefonelink: https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
+     telefonelink: https://api.whatsapp.com/send/?phone=5519971564256&text=Vimdosite&app_absent=0
      telegramlink: https://t.me/terapiainspire
      email: terapiainspire@gmail.com
      emaillink : "mailto:terapiainspire@gmail.com"
