--- a/_data/casamentos.yml
+++ b/_data/casamentos.yml
@@ -26,3 +26,15 @@ casamentos:
   - title:  
     subtitle: 
     imagem: images/casamentos/casamento05b.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento06a.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento06b.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento06c.jpg
+      - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento06a.mp4
