--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,8 +3,8 @@
 #
 empresa:  
      title: Celebrante Diego Santos
-     nome: Terapia Inspire
-     slogan: Cuide da sua saúde emocional e espiritual.
+     nome: Celebrações Inspire
+     slogan: CELEBRE O SEU CASAMENTO COM A BENÇÃO DE DEUS, UNINDO FÉ E AMOR! 
      endereco: Rua 7 de setembro, 666 - Centro &bull; Araras, SP - BRASIL
      enderecolink: https://g.page/r/CSKVjwmt_FcfEBA
      wazelink: https://www.waze.com/en/live-map/directions/br/sp/terapia-inspire?place=ChIJkc-Co0h3yJQRIpWPCa38Vx8
@@ -20,28 +20,33 @@ empresa:
      portfolio : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      logo: images/logo.png
      detalhes: |
-              Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. \
-              Você já se sentiu frustrado por não conseguir alcançar seus objetivos? Em muitos casos, o estresse ocorre em virtude da falta de organização. Trabalhar com níveis reduzidos de estresse é fundamental para desenvolver e alcançar seus objetivos, para que você consiga encarar as suas tarefas e desafios com mais clareza e tranquilidade.
+               Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. \
+               
+               Você já se sentiu frustrado por não conseguir alcançar seus objetivos? Em muitos casos, o estresse ocorre em virtude da falta de organização. Trabalhar com níveis reduzidos de estresse é fundamental para desenvolver e alcançar seus objetivos, para que você consiga encarar as suas tarefas e desafios com mais clareza e tranquilidade.
 
 Celebrante: 
      detalhes: |
-          Celebro o amor incondicional dos noivos e torno o grande dia da celebração deles ainda mais inesquecível e cheia de emoção! 
-          A cerimônia é um dos momentos mais importantes e emocionantes no casamento. Por isso, é preciso ter alegria, empatia, calma e sensibilidade. Nesse sentido, traduzo o amor que os noivos sentem um pelo outro através da construção de uma celebração personalizada, baseada no estilo, desejos, histórias, qualidades, valores e características do casal e da família.
-          Palavras que brotam da inspiração divina tocam o interior das pessoas e as emocionam, pois falam de coração para coração.
-          Todos os convidados sentem-se acolhidos e envolvidos na celebração uma vez que Deus se faz presente e se eterniza na felicidade dos noivos.
-          Celebrante: 
+          Diego Santos, em cada celebração de casamento, deixa sua marca como celebrante que não apenas conecta as palavras, mas que conecta corações e se faz sentir a presença de Deus. Seu compromisso vai além do profissionalismo; é uma verdadeira missão de vida. Se você deseja uma celebração que una fé, amor e emoção em cada detalhe, Diego Santos é o celebrante que tornará seu grande dia inesquecível e abençoado.
+          
+          A celebração de casamento, para Diego Santos, não é apenas um ritual; é uma manifestação do divino no amor entre os noivos. Cada detalhe é cuidadosamente pensado para refletir as personalidades, histórias e virtudes do casal. Com alegria, empatia e uma profunda sensibilidade, Diego Santos constrói uma celebração onde Deus se faz presente, tocando corações e unindo almas.
+
 
 Cerimonia: 
-     title: Cerimônia de Casamento
+     title: SERVIÇOS OFERECIDOS
      detalhes: |
-          A cerimônia será personalizada, elaborada de acordo com o desejo do casal, acrescida de simbolismos, tradições familiares, leituras e homenagens que criarão uma experiência profunda de oração e emocionante para os noivos e seus familiares e amigos.
+          O Celebrante Diego Santos celebra casamentos e cerimônias de bodas. Antes do grande dia, para que a cerimônia reflita fielmente o amor dos noivos, ele realiza ao menos duas reuniões com o casal para conhecer a história da sua união, construindo em conjunto a cerimônia que ficará para sempre marcada nas suas vidas e na vida dos seus convidados. Transformando tudo isso em palavras que não apenas falam, mas que tocam o coração.
+          
+          Palavras inspiradas pela fé brotam do fundo do seu coração, ecoando na emoção de cada um dos presentes. E é assim que, em meio a sorrisos, lágrimas e orações, o celebrante Diego Santos conduz os noivos e seus convidados em uma experiência que transcende o tempo, onde o Sagrado se manifesta em cada gesto, em cada olhar.
+
 
 Briefing: 
-     title: BRIEFING
+     title: ÁREAS DE ATUAÇÃO E FORMAÇÃO
      detalhes: |
-          Para traduzir em palavras a história e a personalidade dos noivos, bem como os desejos deles para a celebração, me encontro pessoalmente com eles para alinharmos o roteiro da celebração. Cada detalhe é essencial para elaborar uma cerimônia que seja marcante e inesquecível.
+          Atua na cidade de Araras-SP e região metropolitana de Campinas e Ribeirão Preto, e todo litoral paulistano. Diego Santos é psicoterapeuta e possui uma rica formação em Jornalismo (ISCA Faculdades), Filosofia e Teologia (PUC-Campinas), além de ser estudante de Psicologia. Ele encontrou em seu propósito de vida a missão de transformar cerimônias de casamento em experiências espirituais inesquecíveis. Há 15 anos, ele dedica seu coração e sua fé para celebrar o amor incondicional, criando momentos que permanecem gravados na memória e na alma. Pós-graduado em Terapia Sistêmica de Casal e Família, Psicanálise e Coaching e Liderança, coleciona uma vasta experiência na celebração de casamentos, bem como no aconselhamento pré e pós-matrimonial. 
 
-Ritual: 
-     title: Ritual
-     detalhes: |
-          Com o trabalho de produção de conteúdo e de roteiro profissional, escrevo o rito e o discurso, trazendo o amor, a história, as lembranças e as crenças fortalecedoras que constituem a vida matrimonial. Através da espiritualidade, a cerimônia é o momento de expressar todas as emoções incríveis que os noivos escolheram viver e compartilhar um com o outro.
+          Nesta página, vocês encontrarão muitas informações sobre a celebração, mas o celebrante Diego Santos faz questão de conversar pessoalmente com vocês, através de uma chamada de vídeo, sem compromisso, para tirar todas as suas dúvidas e conhecer os detalhes da sua história. Entre em contato para solicitar um orçamento e agendar sua reunião.
+
+#Ritual: 
+#     title: Ritual
+#     detalhes: |
+#          Com o trabalho de produção de conteúdo e de roteiro profissional, escrevo o rito e o discurso, trazendo o amor, a história, as lembranças e as crenças fortalecedoras que constituem a vida matrimonial. Através da espiritualidade, a cerimônia é o momento de expressar todas as emoções incríveis que os noivos escolheram viver e compartilhar um com o outro.
