--- a/_data/casamentos.yml
+++ b/_data/casamentos.yml
@@ -36,3 +36,12 @@ casamentos:
     subtitle: 
     video: images/casamentos/casamento06a.mp4
     capa: images/casamentos/casamento06c.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento07a.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento07b.jpg
+  - title:  
+    subtitle: 
+    imagem: images/casamentos/casamento07c.jpg
