--- a/_data/data.yml
+++ b/_data/data.yml
@@ -19,6 +19,7 @@ empresa:
      imagem: images/diego.webp
      portfolio : https://api.whatsapp.com/send/?phone=5519971564256&text&app_absent=0
      logo: images/logo.png
+     logonova: images/logonova.png
      detalhes: |
                Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. \
                
