--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,7 +4,8 @@
 empresa:  
      title: Celebrante Diego Santos
      nome: Celebrações Inspire
-     slogan: CELEBRE O SEU CASAMENTO COM A BENÇÃO DE DEUS, UNINDO FÉ E AMOR! 
+     celebrante: Diego Santos
+     slogan: Celebre o seu casamento com a benção de Deus, unindo fé e amor! 
      endereco: Rua 7 de setembro, 666 - Centro &bull; Araras, SP - BRASIL
      enderecolink: https://g.page/r/CSKVjwmt_FcfEBA
      wazelink: https://www.waze.com/en/live-map/directions/br/sp/terapia-inspire?place=ChIJkc-Co0h3yJQRIpWPCa38Vx8
@@ -24,6 +25,11 @@ empresa:
                Sabe aquela sensação de estar perdido? Ou aquela busca interna por respostas e entendimentos de várias questões complexas da sua vida? Eu tenho a chave para suas inquietações. Quem passa pelo processo da Terapia Inspire, realiza mudanças e transformações significativas em sua vida alcançando maior clareza da sua história pessoal e ganha saúde e bem-estar. \
                
                Você já se sentiu frustrado por não conseguir alcançar seus objetivos? Em muitos casos, o estresse ocorre em virtude da falta de organização. Trabalhar com níveis reduzidos de estresse é fundamental para desenvolver e alcançar seus objetivos, para que você consiga encarar as suas tarefas e desafios com mais clareza e tranquilidade.
+
+menu:  
+     item1: Celebrante
+     item2: Casamentos
+     item3: Contato
 
 Celebrante: 
      detalhes: |
