--- a/_data/data.yml
+++ b/_data/data.yml
@@ -59,5 +59,5 @@ Briefing:
 #          Com o trabalho de produção de conteúdo e de roteiro profissional, escrevo o rito e o discurso, trazendo o amor, a história, as lembranças e as crenças fortalecedoras que constituem a vida matrimonial. Através da espiritualidade, a cerimônia é o momento de expressar todas as emoções incríveis que os noivos escolheram viver e compartilhar um com o outro.
 
 contato: 
-     title: Agende agora sua conversa 
+     title: Contato - Agende agora sua conversa 
      subtitle:  Entre em contato via WhatsApp, instagram, e-mail ou nosso endereço.
