--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,6 +37,13 @@ Celebrante:
           
           A celebração de casamento, para Diego Santos, não é apenas um ritual; é uma manifestação do divino no amor entre os noivos. Cada detalhe é cuidadosamente pensado para refletir as personalidades, histórias e virtudes do casal. Com alegria, empatia e uma profunda sensibilidade, Diego Santos constrói uma celebração onde Deus se faz presente, tocando corações e unindo almas.
 
+Formacao: 
+     title: ÁREAS DE ATUAÇÃO E FORMAÇÃO
+     detalhes: |
+          Atua na cidade de Araras-SP e região metropolitana de Campinas e Ribeirão Preto, e todo litoral paulistano. Diego Santos é psicoterapeuta e possui uma rica formação em Jornalismo (ISCA Faculdades), Filosofia e Teologia (PUC-Campinas), além de ser estudante de Psicologia. Ele encontrou em seu propósito de vida a missão de transformar cerimônias de casamento em experiências espirituais inesquecíveis. Há 15 anos, ele dedica seu coração e sua fé para celebrar o amor incondicional, criando momentos que permanecem gravados na memória e na alma. Pós-graduado em Terapia Sistêmica de Casal e Família, Psicanálise e Coaching e Liderança, coleciona uma vasta experiência na celebração de casamentos, bem como no aconselhamento pré e pós-matrimonial. 
+
+          Nesta página, vocês encontrarão muitas informações sobre a celebração, mas o celebrante Diego Santos faz questão de conversar pessoalmente com vocês, através de uma chamada de vídeo, sem compromisso, para tirar todas as suas dúvidas e conhecer os detalhes da sua história. Entre em contato para solicitar um orçamento e agendar sua reunião.
+
 
 Cerimonia: 
      title: SERVIÇOS OFERECIDOS
@@ -46,17 +53,15 @@ Cerimonia:
           Palavras inspiradas pela fé brotam do fundo do seu coração, ecoando na emoção de cada um dos presentes. E é assim que, em meio a sorrisos, lágrimas e orações, o celebrante Diego Santos conduz os noivos e seus convidados em uma experiência que transcende o tempo, onde o Sagrado se manifesta em cada gesto, em cada olhar.
 
 
-Briefing: 
-     title: ÁREAS DE ATUAÇÃO E FORMAÇÃO
-     detalhes: |
-          Atua na cidade de Araras-SP e região metropolitana de Campinas e Ribeirão Preto, e todo litoral paulistano. Diego Santos é psicoterapeuta e possui uma rica formação em Jornalismo (ISCA Faculdades), Filosofia e Teologia (PUC-Campinas), além de ser estudante de Psicologia. Ele encontrou em seu propósito de vida a missão de transformar cerimônias de casamento em experiências espirituais inesquecíveis. Há 15 anos, ele dedica seu coração e sua fé para celebrar o amor incondicional, criando momentos que permanecem gravados na memória e na alma. Pós-graduado em Terapia Sistêmica de Casal e Família, Psicanálise e Coaching e Liderança, coleciona uma vasta experiência na celebração de casamentos, bem como no aconselhamento pré e pós-matrimonial. 
-
-          Nesta página, vocês encontrarão muitas informações sobre a celebração, mas o celebrante Diego Santos faz questão de conversar pessoalmente com vocês, através de uma chamada de vídeo, sem compromisso, para tirar todas as suas dúvidas e conhecer os detalhes da sua história. Entre em contato para solicitar um orçamento e agendar sua reunião.
 
 #Ritual: 
 #     title: Ritual
 #     detalhes: |
 #          Com o trabalho de produção de conteúdo e de roteiro profissional, escrevo o rito e o discurso, trazendo o amor, a história, as lembranças e as crenças fortalecedoras que constituem a vida matrimonial. Através da espiritualidade, a cerimônia é o momento de expressar todas as emoções incríveis que os noivos escolheram viver e compartilhar um com o outro.
+
+Casamentos:
+     title: Cerimônias e Casamentos Realidadas
+     subtitle: Conheça algumas das cerimônias e Casamentosrealizadas por Diego Santos
 
 contato: 
      title: Contato - Agende agora sua conversa 
