--- a/_data/data.yml
+++ b/_data/data.yml
@@ -73,4 +73,4 @@ Casamentos:
 
 contato: 
      title: Contato - Agende agora sua conversa 
-     subtitle:  Entre em contato via WhatsApp, Instagram, E-mail ou nosso endereço.
+     subtitle:  Entre em contato em nosso endereço, WhatsApp, Instagram ou E-mail.
