--- a/_data/dataen.yml
+++ b/_data/dataen.yml
@@ -71,4 +71,4 @@ Casamentos:
 
 contato: 
      title: Contact - Schedule your conversation now
-     subtitle:  Contact us via WhatsApp, Instagram, email or our address.
+     subtitle:  Contact us at our address, WhatsApp, Instagram or Email.
