--- a/_data/data.yml
+++ b/_data/data.yml
@@ -72,3 +72,10 @@ Casamentos:
 contato: 
      title: Contato - Agende agora sua conversa 
      subtitle:  Entre em contato em nosso endereço, WhatsApp, Instagram ou E-mail.
+
+palavras:
+     item: Palavras que Inspiram
+     title: Palavras que Inspiram
+     subtitle:  Chegou o momento de estarmos mais próximos de Deus, esse é meu devocional onde vamos junto com fé, refletir a palavra de Deus.
+     detalhes: |
+           
